--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - ./src:/app
+      - ./react-app:/app
       - /app/node_modules
     working_dir: /app
     stdin_open: true
