--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.84.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/axios": "^0.14.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
