feat:compornents以下にcheckbox、populationChart、prefectureFromフォルダを追加

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "highcharts": "^12.1.2",
+    "highcharts-react-official": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.84.0"
