--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest --config ./jest.config.js",
@@ -25,7 +25,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/axios": "^0.14.4",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/testing-library__jest-dom": "^6.0.0",
