--- a/react-app/tsconfig.app.json
+++ b/react-app/tsconfig.app.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "composite": true,
     "skipLibCheck": true,
+    "emitDeclarationOnly": false,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
