--- a/react-app/tsconfig.json
+++ b/react-app/tsconfig.json
@@ -10,7 +10,9 @@
     "target": "ES2020",
     "jsx": "react-jsx",
     "types": ["node", "jest", "@testing-library/jest-dom"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "declaration": true,  
+    "emitDeclarationOnly": false 
   },
-  "include": ["src"]
+  "include": ["src/**/*"]
 }
