--- a/react-app/tsconfig.node.json
+++ b/react-app/tsconfig.node.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "composite": true,
     "skipLibCheck": true,
-
+    "emitDeclarationOnly": false,
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
